EventForce-Salesforce/EventForce-Salesforce/force-app/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
  <label>Feedback</label><pluralLabel>Feedbacks</pluralLabel>
  <nameField><label>Feedback</label><type>AutoNumber</type><displayFormat>F-{0000}</displayFormat><startingNumber>0</startingNumber></nameField>
<sharingModel>ReadWrite</sharingModel><enableActivities>true</enableActivities><enableHistory>true</enableHistory><enableSearch>true</enableSearch>
</CustomObject>