EventForce-Salesforce/EventForce-Salesforce/force-app/main/default/objects/Feedback__c/fields/Client__c.field-meta.xml
<CustomField>
  <fullName>Client__c</fullName><label>Client</label><type>Lookup</type><referenceTo>Client__c</referenceTo><relationshipLabel>Clients</relationshipLabel><relationshipName>Client__c</relationshipName>
</CustomField>