EventForce-Salesforce/EventForce-Salesforce/force-app/main/default/objects/Feedback__c/fields/Rating__c.field-meta.xml
<CustomField>
  <fullName>Rating__c</fullName><label>Rating</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>true</sorted><value><fullName>1</fullName><default>false</default></value><value><fullName>2</fullName><default>false</default></value><value><fullName>3</fullName><default>false</default></value><value><fullName>4</fullName><default>false</default></value><value><fullName>5</fullName><default>false</default></value></valueSetDefinition></valueSet>
</CustomField>